Added day 2. Note: To use this code you need to compile the code and when you execute it, reroute the standard input to your input written in a text file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /Day1
-/.idea/misc.xml
-/.idea/vcs.xml
-/.idea/modules.xml
-/.idea/AdventOfCode_2022.iml
+/.DS_Store
+/.idea
+/cmake-build-debug
+/CMakeLists.txt
+/template.c
+/Day2
